--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,6 @@
 
 
     <!-- Nav bar -->
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
@@ -45,32 +44,17 @@
             </div>
         </nav>
     </div>
+
+    <!--Mobile side nav-->
     <ul class="sidenav" id="mobile-demo">
         <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Features</a></li>
-        <li><a href="#"><i class="nav-icon fa fa-arrow-circle-o-up" aria-hidden="true"></i> Login</a></li>
-        <li><a href="#"><i class="nav-icon fa fa-arrow-circle-o-up" aria-hidden="true"></i> Register</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#"> Register</a></li>
     </ul>
-    <!-- Main Div-->
 
-
-    <div class="parallax-container">
-        <div class="parallax"><img src="{{ url_for('static', filename='images/main-section-image.png') }}"></div>
-    </div>
-    <div class="section white">
-        <div class="row container">
-            <h2 class="header">Parallax</h2>
-            <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image
-                in
-                this case, is moved at a different speed than the foreground content while scrolling.</p>
-        </div>
-    </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="{{ url_for('static', filename='images/main-section-image2.png') }}"></div>
-    </div>
-
-
+    <!-- Footer -->
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
         <div class="footer-copyright">
             <div class="social-icons container center">
