fixed features icons position and centered icon text

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- Main Div for parallax-->
-
-
 <div class="parallax-container">
     <div class="parallax"><img class="responsive-img"
             src="{{ url_for('static', filename='images/main-section-image.png') }}"></div>
@@ -25,31 +23,35 @@
 </div>
 <!--All feature icons-->
 <div class="container">
-    <div id="features" class="features">
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">edit</i>
-            <p class="icon-desc">Add/Edit Games</p>
+    <div id="features" class="features ">
+        <div class="row center-align">
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">edit</i>
+                <p class="icon-desc">Add/Edit Games</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">data_usage</i>
+                <p class="icon-desc">All data in one place</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">mobile_friendly</i>
+                <p class="icon-desc">Mobile Friendly</p>
+            </div>
         </div>
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">data_usage</i>
-            <p class="icon-desc">All data in one place</p>
+        <div class="row center-align">
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">games</i>
+                <p class="icon-desc">Major platforms supported</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">system_update</i>
+                <p class="icon-desc">Constant Updates</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <i class="material-icons icon">videogame_asset</i>
+                <p class="icon-desc">Retro Games Support</p>
+            </div>
         </div>
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">mobile_friendly</i>
-            <p class="icon-desc">Mobile Friendly</p>
-        </div>
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">games</i>
-            <p class="icon-desc">Major platforms supported</p>
-        </div>
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">system_update</i>
-            <p class="icon-desc">Constant Updates</p>
-        </div>
-        <div class="col s12 m4 l4">
-            <i class="material-icons icon">videogame_asset</i>
-            <p class="icon-desc">Retro Games Support</p>
-        </div>
+
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
