changed footer social icons, fixed a non click issue with the mail button

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,12 @@
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
         <div class="footer-copyright">
             <div class="social-icons container center">
-                <a href="https://www.facebook.com" aria-label="Facebook" rel="noopener" target="_blank"><i
-                        class="fab fa-facebook-square"></i></a>
+                <a href="mailto:contact@nunonunes.dev" aria-label="Email" rel="noopener" target="_blank"><i
+                        class="fas fa-envelope"></i></a>
                 <a href="https://www.twitter.com" aria-label="Twitter" rel="noopener" target="_blank"><i
                         class="fab fa-twitter-square"></i></a>
-                <a href="https://www.instagram.com" aria-label="Instagram" rel="noopener" target="_blank"><i
-                        class="fab fa-instagram-square"></i></a>
+                <a href="https://www.nunonunes.dev" aria-label="Website" rel="noopener" target="_blank"><i
+                        class="fab fa-chrome"></i></a>
                 <div class="designed-by">
                     Designed by Nuno Nunes
                 </div>
