--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,22 +19,24 @@ body {
 nav ul a {
     font-size: 15px;
 }
-nav{
+
+nav {
     background-color: black;
 }
-nav .brand-logo {
 
+nav .brand-logo {
     margin-left: 20px;
 }
 
-
 /* Features - Icons */
+
 .icon {
     font-size: 35px!important;
     color: #ED6E07;
 }
 
 /* feature description style*/
+
 .icon-desc {
     font-size: 14px;
     color: black;
@@ -42,17 +44,17 @@ nav .brand-logo {
 }
 
 /* Side nav . mobile view */
+
 .sidenav {
     background-color: #0D0D0D;
     width: 150px;
 }
 
 /* Text color in sidenav */
+
 .sidenav li>a {
     color: white;
 }
-
-
 
 /* Footer settings */
 
@@ -60,17 +62,22 @@ nav .brand-logo {
     background-color: black!important;
     color: white;
 }
-.footer-copyright{
+
+.footer-copyright {
     background-color: black!important;
 }
+
 .social-icons {
     font-size: 20px;
+    z-index: 9999999;
 }
 
 .fab {
     color: #D3D3D3;
 }
-
+.fas{
+    color:#D3D3D3;
+}
 .designed-by {
     font-size: 12px;
 }
