--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Features</a></li>
-                        <li><a href="{{url_for('login')}}">Login</a></li>
+                        <li><a href="{{url_for('login_page')}}">Login</a></li>
                         <li><a href="{{url_for('signup')}}">Sign Up</a></li>
                     </ul>
             </div>
@@ -51,7 +51,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Features</a></li>
-        <li><a href="{{url_for('login')}}">Login</a></li>
+        <li><a href="{{url_for('login_page')}}">Login</a></li>
         <li><a href="{{url_for('signup')}}">Sign Up</a></li>
     </ul>
 
