--- a/templates/base.html
+++ b/templates/base.html
@@ -27,20 +27,20 @@
 
 <body>
 
-
+    <!--If user is logged in then show the correct Navbar options-->
+    {% if session ['username'] %}
     <!-- Nav bar -->
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
                 <a href="{{url_for('index')}}" class="brand-logo"><img alt="logo" src="../static/images/logo.png"
-                        width="20" height="20" alt="">
+                        width="20" height="20" alt="">Loot
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="{{url_for('login_page')}}">Login</a></li>
-                        <li><a href="{{url_for('signup')}}">Sign Up</a></li>
+                        <li><a href="{{url_for('index')}}">Home</a></li>
+                        <li><a href="#"><i class="material-icons left">group</i>Hi {{session['username'].title()}}!</a></li>
+                        <li><a href="#">Loot</a></li>
+                        <li><a href="#">Logout</a></li>
                     </ul>
             </div>
         </nav>
@@ -48,12 +48,43 @@
 
     <!--Mobile side nav-->
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="{{url_for('login_page')}}">Login</a></li>
-        <li><a href="{{url_for('signup')}}">Sign Up</a></li>
+        <li><a href="{{url_for('index')}}">Home</a></li>
+        <li><a href="#">Hi {{session['username'].title()}}!</a></li>
+        <li><a href="#">Loot</a></li>
+        <li><a href="#">Logout</a></li>      
     </ul>
+    {% else %}
+    <!--If not logged in display the following Nav bar-->
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="{{url_for('index')}}" class="brand-logo"><img alt="logo" src="../static/images/logo.png" width="30"
+                        height="30" alt=""> Loot
+                </a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('index')}}">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="{{url_for('login_page')}}">Login<i class="material-icons left">account_circle</i></a></li>
+                    <li><a href="{{url_for('register')}}">Register<i class="material-icons left">create</i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <!--Side nav-->
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="{{url_for('index')}}">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="{{url_for('login_page')}}">Login</a></li>
+        <li><a href="{{url_for('signup')}}">Register</a></li>
+    </ul>
+
+    
+  {% endif %}
 
     <!-- Footer -->
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
