fixed signup link

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="{{url_for('login_page')}}">Login<i class="material-icons left">account_circle</i></a></li>
-                    <li><a href="{{url_for('register')}}">Register<i class="material-icons left">create</i></a></li>
+                    <li><a href="{{url_for('signup')}}">Register<i class="material-icons left">create</i></a></li>
                 </ul>
             </div>
         </nav>
