disabled images to show up in mobile devices

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <!-- Main Div for parallax-->
 <div class="parallax-container">
-    <div class="parallax"><img class="responsive-img"
+    <div class="parallax"><img class="hide-on-med-and-down responsive-img"
             src="{{ url_for('static', filename='images/main-section-image.png') }}"></div>
 </div>
 <div class="section white">
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="parallax-container">
-    <div class="parallax"><img class="responsive-img"
+    <div class="parallax"><img class="hide-on-med-and-down responsive-img"
             src="{{ url_for('static', filename='images/main-section-image2.png') }}"></div>
 </div>
 <!--Features Title-->
