--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <h4 class="header">1UP Loot</h4>
         <p class="grey-text text-darken-3 lighten-3">1Up Loot is a game collection manager app to help you organize
             your gaming collection.
-            It supports all major platforms and it's easy to use!</p>
+            It supports all major platforms and retro game systems!</p>
     </div>
 </div>
 <div class="parallax-container">
