--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="parallax"><img class="hide-on-med-and-down responsive-img"
             src="{{ url_for('static', filename='images/main-section-image.png') }}"></div>
 </div>
-<div class="section white">
+<div id="about" class="section white"> 
     <div class="row container">
         <h4 class="header">1UP Loot</h4>
         <p class="grey-text text-darken-3 lighten-3">1Up Loot is a game collection manager app to help you organize
