--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,7 @@
              <!--Login link-->
             <div class="col s12 m12 lg12 center">
                 <div class="col s12 m12 lg12 center">
-                    Already have an account? <a href="{{ url_for('login') }}"><u>Login here</u></a>.
+                    Already have an account? <a href="{{ url_for('login_page') }}"><u>Login here</u></a>.
                 </div>
                  <!--Error message for register here-->
                 <h5>{{error_register}}</h5>
